improved styling and added sources section

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Conways Game of Life</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.js" defer></script>
     <script src="./script.js" defer></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <h1>Conways Game of Life</h1>
@@ -25,6 +25,12 @@
         <button id="next">next</button>
         <button id="play">play</button>
         <button id="reset">reset</button>
+    </div>
+    <div>
+        <h2>Sources:</h2>
+        <ul>
+            <li><a href="https://en.wikipedia.org/wiki/Conway%27s_Game_of_Life">https://en.wikipedia.org/wiki/Conway%27s_Game_of_Life</a></li>
+        </ul>
     </div>
     </body>
 </html>
